# mx

./: .gitignore  Cargo.toml  README.md  history.txt
.github/workflows/: deploy-docs.yml  follow-the-white-rabbit.yml  knock-knock.yml  wake-up.yml
docs/: build.sh  paths.md
docs/src/: architecture.typ  base-d.typ  codex.typ  commit.typ  convert.typ  getting-started.typ  github.typ  index.typ  kv.typ  lib.typ  log.typ  memory.typ  paths.typ  pr.typ  session.typ  show.typ  state.typ  sync.typ  wiki.typ
proptest-regressions/: wake_chunk.txt
schema/: surrealdb-schema.surql
schema/state/schemas/: tensor.yaml
src/: cli.rs  codex.rs  commit.rs  db.rs  display.rs  embeddings.rs  helpers.rs  index.rs  knowledge.rs  kv.rs  main.rs  paths.rs  session.rs  store.rs  surreal_db.rs  tensor.rs  wake_chunk.rs  wake_ritual.rs  wake_token.rs
src/codex/: archive.rs  images.rs  migrate.rs  mod.rs  notices.rs  read.rs  transcript.rs
src/codex/archive/: backfill.rs  include.rs  mod.rs  paths.rs  sources.rs  write.rs
src/codex/export/: detect.rs  filter.rs  include.rs  mod.rs  read.rs
src/codex/export/format/: json.rs  markdown.rs  mod.rs
src/codex/index/: mod.rs
src/handlers/: kv.rs  memory.rs  metadata.rs  mod.rs  state.rs
src/state/: legacy.rs  loader.rs  mod.rs  schema.rs
src/surreal_db/: connection.rs  knowledge.rs  lookups.rs  mod.rs  queries.rs  relationships.rs  tests.rs  trait_impl.rs
src/sync/: mod.rs
src/sync/commands/: mod.rs
src/sync/github/: auth.rs  rest.rs
tests/fixtures/manifest-golden/: session.jsonl  single-clean.json  single-full.json
